<resources>
    <string name="app_name">wally</string>
    <string name="welcome">Welcome to the app!</string>
    <string name="add_entry">Add entry</string>
    <string name="description">Description</string>
    <string name="bucket">Bucket</string>
    <string name="add_spending">Add spending</string>
    <string name="add_income">Add income</string>
    <string name="add_saving">Add saving</string>
    <string name="spending">Spending</string>
    <string name="saving">Saving</string>
    <string name="income">Income</string>
    <string name="amount">Amount</string>
    <string name="welcome_to_wally">Welcome to Wally!</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="add_bucket">Add bucket</string>
    <string name="bucket_type">Bucket type</string>
    <string name="due_date">Due date</string>
    <string name="title">Title</string>
    <string name="target">Target</string>
    <string name="entries">Entries</string>
    <string name="options">Options</string>
    <string name="delete">Delete</string>
    <string name="Home">Home</string>
    <string name="Buckets">Buckets</string>
    <string name="Profile">Profile</string>
    <string name="add_bucket_entry">Add bucket entry</string>
    <string name="metrics_coming_soon">Metrics coming soon!</string>
    <string name="activity">Activity</string>
    <string name="collapsed_indicator">Collapsed indicator</string>
    <string name="all_buckets">All buckets</string>
    <string name="name">Name</string>
    <string name="no_spending_buckets_available">No spending buckets available</string>
    <string name="no_savings_buckets_available">No savings buckets available</string>
    <string name="load_image">Load image</string>
    <string name="entry_saving_failed">Entry could not be saved</string>
    <string name="entry_saving_success">Entry %1$s saved</string>
    <string name="error_empty">Can\'t be empty</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="Spanish">Spanish</string>
    <string name="English">English</string>
    <string name="Language">Language</string>
    <string name="image">Image</string>
    <string name="error">Something went wrong</string>
    <string name="error_get_bucket">Error showing bucket</string>
    <string name="error_delete_bucket">Error deleting bucket</string>
    <string name="success_delete_bucket">Success deleting bucket</string>
    <string name="warning_bucket">You will not be able to see the buckets pictures</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_entries_available">No entries available</string>
    <string name="error_future_date">Can\'t set future date</string>
    <string name="max_amount">Max amount is %1$d</string>
    <string name="max_characters">Max characters is %1$d</string>
    <string name="error_past_date">Can\'t be a past date</string>
    <string name="error_saving_bucket">Error saving bucket</string>
    <string name="bucket_saved">Bucket %1$s saved</string>
    <string name="recurrent_bucket">Recurrent bucket in a month</string>
    <string name="recurrent_income">Recurrent income in a month</string>
    <string name="entries_old">History</string>
    <string name="monthly_income">Monthly income</string>
    <string name="apply_changes">Apply changes</string>
    <string name="error_saving_income">Income could not be saved</string>
    <string name="income_saving_success">Income %1$s saved</string>
    <string name="money_display">$%1$.2f</string>
    <string name="error_format">Needs to include at least one digit</string>
    <string name="no_income_entries_added_yet">No income entries available</string>
    <string name="metrics">Metrics</string>
    <string name="others">Others</string>
    <string name="error_existing_bucket_name">Bucket with that name already exists</string>
    <string name="bucket_notif_title">Your bucket\'s due date is getting close!</string>
    <string name="bucket_notif_message">Your bucket \'%1$s\' will reach is due date soon. Try to meet your goal!</string>
    <string name="edit">Edit</string>
</resources>