<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_bucket"
        android:gravity="center_horizontal"
        style="@style/Titles"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bucket_type"
        android:layout_marginBottom="@dimen/form_margin">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/bucket_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:hint="@string/title"
        style="@style/FormInputs"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/target"
        style="@style/FormInputs"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/due_date"
        android:hint="@string/due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        style="@style/FormInputs"
        android:focusable="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_load_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/load_image"
        android:layout_gravity="center"
        style="?attr/materialButtonOutlinedStyle"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_bucket"
        style="@style/FormInputs"/>

</LinearLayout>