<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddIncomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:hint="@string/description"
                style="@style/FormInputs"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/amount"
                style="@style/FormInputs"
                />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:hint="@string/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            style="@style/FormInputs"
            android:focusable="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_income"
            style="@style/FormInputs"/>

    </LinearLayout>
</FrameLayout>
