<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<com.google.android.material.textview.MaterialTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Profile"
    style="@style/Titles" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/profile_pic_radius"
        app:strokeColor="#DDDDDD"
        app:strokeWidth="2dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view"
            android:layout_width="@dimen/profile_pic_size"
            android:layout_height="@dimen/profile_pic_size"
            android:fitsSystemWindows="true"
            android:scaleType="fitCenter"
            app:layout_collapseMode="parallax"
            app:srcCompat="@drawable/ic_baseline_person_100"/>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Language"
            style="@style/Subtitles2"/>

        <RadioGroup
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/spanish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Spanish"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/English"/>
        </RadioGroup>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_changes_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/apply_changes"/>
    </LinearLayout>
</merge>