<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        style="@style/Titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/title_padding"
        android:text="@string/all_buckets" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/spending_buckets_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_margin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/content_padding">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/spending_buckets_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/content_padding"
                        android:layout_marginLeft="@dimen/content_padding"
                        android:gravity="center"
                        android:text="@string/spending"
                        android:textSize="@dimen/subtitle_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/spending_buckets_collapsed_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/collapsed_indicator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.505"
                        app:srcCompat="@drawable/ic_collapsed_indicator" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/spending_buckets_unavailable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/content_padding"
                android:gravity="center"
                android:text="@string/no_spending_buckets_available"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/spending_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/ListItemsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|start"
                    android:paddingLeft="@dimen/content_padding"
                    android:text="@string/name" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/ListItemsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="@dimen/content_padding"
                    android:paddingStart="@dimen/content_padding"
                    android:text="@string/target" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/spending_buckets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/savings_buckets_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_margin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/content_padding">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/savings_buckets_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/content_padding"
                        android:layout_marginLeft="@dimen/content_padding"
                        android:gravity="center"
                        android:text="@string/saving"
                        android:textSize="@dimen/subtitle_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/savings_buckets_collapsed_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/collapsed_indicator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.505"
                        app:srcCompat="@drawable/ic_collapsed_indicator" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/savings_buckets_unavailable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/content_padding"
                android:gravity="center"
                android:text="@string/no_savings_buckets_available"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/savings_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/ListItemsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|start"
                    android:paddingLeft="@dimen/content_padding"
                    android:text="@string/name" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/ListItemsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="@dimen/content_padding"
                    android:paddingRight="@dimen/content_padding"
                    android:text="@string/target" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/savings_buckets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_bucket_button"
                style="@style/FormInputs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_bucket" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</merge>
